@@ -2,6 +2,8 @@ version 0.81.05
 	Using newer mingw for Windows crosscompile
 	Attemp to fix root requirement
 	strncpy bugfix
+	Also check /dev/block if device file is not found in /dev
+	android port of pktriggercord-cli
 
 version 0.81.04 ( 2014-05-01 )
 	--noshutter ( thx Piotr Dlugosz )
